Доработать анимацию, добавить мета-описание в index.html

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8">   
+    <meta property="og:title" content="Angular Material animation example" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://mf.terni.ru" />
+    <meta property="og:image" content="http://mf.terni.ru/mf-meta-logo.png" />
+    <meta property="og:description" content="Пример работы Angular Material + Animation" />
+    <meta name="description" content="Пример работы Angular Material + Animation" />
+    <meta name="keywords" content="angular,material,typescript" />
     <title>Angular</title>
     <base href=".">
     <meta name="viewport" content="width=device-width, initial-scale=1">
