--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Пример работы Angular Material + Animation" />
     <meta name="keywords" content="angular,material,typescript" />
     <title>Angular</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
     <script>
         var base = document.createElement('base');
         var path = window.location.pathname;
